force-app/main/default/objects/Crew_Sheet__c/Crew_Sheet__c.object-meta.xml
<CustomObject>
    <label>Crew Sheet</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Crew Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>