force-app/main/default/objects/Crew_Sheet__c/fields/Break__c.field-meta.xml
<CustomField>
    <fullName>Break__c</fullName>
    <label>Break(Minutes)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>