force-app/main/default/objects/Crew_Sheet__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Crew Sheets</relationshipLabel>
    <relationshipName>Crew_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>