force-app/main/default/objects/Crew_Sheet__c/fields/Labor_Code__c.field-meta.xml
<CustomField>
    <fullName>Labor_Code__c</fullName>
    <label>Labor Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>