force-app/main/default/objects/Crew_Sheet__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>(VALUE(LEFT(LEFT(TEXT(End__c),4), 2))*60 + VALUE(RIGHT(LEFT(TEXT(End__c),5), 2)) - VALUE(LEFT(LEFT(TEXT(Start__c),4), 2))*60 + VALUE(RIGHT(LEFT(TEXT(Start__c),5), 2)) -  (Break__c) )/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>