force-app/main/default/objects/Crew_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Name__c</columns>
    <columns>Labor_Code__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Inspection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>